added some accessability text to image fields

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 </nav>
             </header>            
             <div class="coverphoto">
-                <img src="img/about/yannick-schulz-excavator-lake.jpg" alt="coverphoto silhouette holding a camera">
+                <img src="img/about/yannick-schulz-excavator-lake.jpg" alt="coverphoto silhouette of excavator and splashing water at a lake">
             </div>
 
             <main class="about-page content-color page-heading">
