--- a/photography.html
+++ b/photography.html
@@ -37,32 +37,32 @@
                     <section class="gallery-container">
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" alt="a doctor and an engineer opposite of each other" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" alt="person sitting in chair next to a fire place in a living room and his motorcycle next to him" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="People celabrate next to a racecar equipped with sensors. The driver sits in front and looks sad" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized1.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized1.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized1.jpg" alt="A macro picture of someones eye with stylized iris looking at two mushrooms" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-yasmine-shooting.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-yasmine-shooting.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-yasmine-shooting.jpg" alt="yasmine holding a lamp from which smoke emits" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-first-date.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-first-date.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-first-date.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
                             </a>
                         </div>
                     </section>
@@ -132,12 +132,12 @@
                     <section class="gallery-container">
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" alt="showing the grip of a scalpel in focus " class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="a skalpel in full" class="gallery-img">
                             </a>
                         </div>
                     </section>
@@ -156,37 +156,37 @@
                     <section class="gallery-container">
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized2.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized2.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized2.jpg" alt="stylized picture of a molten candle inside a windbreaker" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-freight-station.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-freight-station.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-freight-station.jpg" alt="a freight train with tags at a station with a warning sign in the foreground" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-silhouette.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-silhouette.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-silhouette.jpg" alt="a silhouette of a person blowing powder in front of a sunset" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-classic1.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-classic1.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-classic1.jpg" alt="close up of rally lights of a classic porsche car" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS1.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS1.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS1.jpg" alt="an open wheel race car accellarating in front of a moody sky" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS2.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS2.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS2.jpg" alt="accellarating open wheel race car with blurry background from the side" class="gallery-img">
                             </a>
                         </div>
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS3.jpg" class="glightbox">
-                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS3.jpg" alt="motorcycle" class="gallery-img">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS3.jpg" alt="a close up of the wheel assembly of an open wheel race car" class="gallery-img">
                             </a>
                         </div>
                     </section>
