started a blog page

--- a/photography.html
+++ b/photography.html
@@ -17,6 +17,7 @@
                         <li class="nav-item"><a href="about.html">About</a></li>
                         <li class="nav-item"><a href="photography.html">Photography</a></li>
                         <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
+                        <li class="nav-item"><a href="blogTop.html">Blog</a></li>
                     </ul>
                 </nav>
             </header>
