--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li class="nav-item"><a href="about.html">About</a></li>
                         <li class="nav-item"><a href="photography.html">Photography</a></li>
                         <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
+                        <li class="nav-item"><a href="blogTop.html">Blog</a></li>
                     </ul>
                 </div>
             </nav>
