changed the video, didnt work out with the format

--- a/blogs/goldsmithing.html
+++ b/blogs/goldsmithing.html
@@ -100,19 +100,23 @@
                     <h2>
                         Prototyping
                     </h2>
-                    <p>
-                        In any project, one should never forget about the importance of proper planning, including prototyping, when the investment into that project, may it be time or money, exceeds the comfortable threshold of risk.
-                        In this case, the risk is not too high, since gold holds its value pretty neatly, I could resell scrap with minimal loss.
-                        However, it turns out that gold is not that easily accessible, especially in a specific extrusion format and dimension.
-                        I didn't find any source within the Netherlands that provided round gold profiles or even at all in retail.
-                        So I opted to source the raw materials from a UK website, that provided the piece in the designated format.
-                        In order to avoid complex tax filings between countries (gold bullions for investment purposes are taxed differently than raw materials, so there is particular interest in cross country gold trade by tax offices), I tried to stay within the bounds to still be taxed right through the website and just buy one piece.
-                        And here arises the necessety to prototype the manufacturing process regardless. <br>
-                    </p>
-                    <p>
-                        Selecting a substitute for gold is fairly easy. Copper pipes are a common choice in any hobby store for a lot of thermal installations.
-                        Copper is very similar in thermal conductivity, melting point and elastic module, which makes it perfect to test out how the deformation affects the material.
-                    </p>
+                    <video src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/video/blog/yannick-schulz-goldsmithing-prototype.mp4" autoplay muted loop class="blog-floating-media"></video>
+                    <div>
+                        <p>
+                            In any project, one should never forget about the importance of proper planning, including prototyping, when the investment into that project, may it be time or money, exceeds the comfortable threshold of risk.
+                            In this case, the risk is not too high, since gold holds its value pretty neatly, I could resell scrap with minimal loss.
+                            However, it turns out that gold is not that easily accessible, especially in a specific extrusion format and dimension.
+                            I didn't find any source within the Netherlands that provided round gold profiles or even at all in retail.
+                            So I opted to source the raw materials from a UK website, that provided the piece in the designated format.
+                            In order to avoid complex tax filings between countries (gold bullions for investment purposes are taxed differently than raw materials, so there is particular interest in cross country gold trade by tax offices), I tried to stay within the bounds to still be taxed right through the website and just buy one piece.
+                            And here arises the necessety to prototype the manufacturing process regardless. <br>
+                        </p>
+                        <p>
+                            Selecting a substitute for gold is fairly easy. Copper pipes are a common choice in any hobby store for a lot of thermal installations.
+                            Copper is very similar in thermal conductivity, melting point and elastic module, which makes it perfect to test out how the deformation affects the material.
+                        </p>
+                    </div>
+                    
                 </div>
                 <div class="blog-section one" id="section4">
                     <h2>
