added demo video

--- a/blogs/goldsmithing.html
+++ b/blogs/goldsmithing.html
@@ -53,6 +53,7 @@
                     <h2>
                         Inspiration
                     </h2>
+                    <video src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/video/blog/yannick-schulz-goldsmithing-demo.mp4" autoplay muted loop class="blog-floating-media"></video>
                     <p>
                         I have to admit, I have a bad habit.
                         Whenever I see something that entices me, I directly go in my head to the thought: "I can do that as well!" <br>
