proceded to add images with new containers in blog

--- a/blogs/goldsmithing.html
+++ b/blogs/goldsmithing.html
@@ -49,7 +49,7 @@
                     Goldsmithing
                 </h1>
                 <p></p>
-                <div class="blog-section one" id="section1">
+                <div class="blog-section" id="section1">
                     <h2>
                         Inspiration
                     </h2>
@@ -72,7 +72,7 @@
                         But let's cut to the chase, shall we?
                     </p>
                 </div>
-                <div class="blog-section one" id="section2">
+                <div class="blog-section" id="section2">
                     <h2>
                         Prerequisites
                     </h2>
@@ -104,7 +104,7 @@
                         With these tools and utensils it should be perfectly possible to make a replica of the Ring Necklace of decent quality.
                     </p>
                 </div>
-                <div class="blog-section one" id="section3">
+                <div class="blog-section" id="section3">
                     <h2>
                         Prototyping
                     </h2>
@@ -131,9 +131,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="blog-section one" id="section4">
+                <div class="blog-section" id="section4">
                     <h2>The Thing</h2>
-                    <div id="section41">
+                    <div class="blog-section-two" id="section41">
                         <h3>Shaping</h3>
                         <p>
                             Beginning with the plain gold tube, I measured and marked the middle and outer bending apices.
@@ -145,8 +145,20 @@
                             Enough reason for me to believe that the piece is hardened by the extrusion process and needs to be annealed before proceding with finishing the sharper bends.
                             This could lead to breaking off of the delicate wings.
                         </p>
+                        <div class="blog-pic-row">
+                            <div class="blog-pic-row-pic">
+                                <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-1.jpg" class="glightbox">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-1.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background">
+                                </a>
+                            </div>
+                            <div class="blog-pic-row-pic">
+                                <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-2.jpg" class="glightbox">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-2.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background">
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div id="section42">
+                    <div class="blog-section-two" id="section42">
                         <h3>Annealing</h3>
                         <p>
                             Annealing is the process of reducing stresses within a metal that may have formed through different processes. 
@@ -161,7 +173,7 @@
                             The evaporating ethanol leaves a film of boric acid on the shiny metal to protect it from unnecessary oxidation during the process.
                         </p>
                     </div>
-                    <div id="section43">
+                    <div class="blog-section-two" id="section43">
                         <h3>Soldering</h3>
                         <p>
                             Coming from my background, soldering involves a tin wire in one hand and the soldering iron in the other, with the goal of joining two conductors with the minimal amount of solder possible.
@@ -197,7 +209,7 @@
                             As said as done it worked like a charm. It has to be said, that there is a degree of color difference between the 9kt and 14kt gold, however, this is expected to be negligible, once the piece is done with a mirror finish.
                         </p>
                     </div>
-                    <div id="section44">
+                    <div class="blog-section-two" id="section44">
                         <h3>Finishing Touch</h3>
                         <p>
                             Once the shaping and soldering part is finished, it gets to the nitty gritty part of the job. Making it look neat.
@@ -221,7 +233,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="blog-section one" id="section5">
+                <div class="blog-section" id="section5">
                     <h2>
                         Results
                     </h2>
