added more media

--- a/blogs/goldsmithing.html
+++ b/blogs/goldsmithing.html
@@ -148,12 +148,12 @@
                         <div class="blog-pic-row">
                             <div class="blog-pic-row-pic">
                                 <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-1.jpg" class="glightbox">
-                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-1.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-1.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
                                 </a>
                             </div>
                             <div class="blog-pic-row-pic">
                                 <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-2.jpg" class="glightbox">
-                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-2.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-2.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
                                 </a>
                             </div>
                         </div>
@@ -208,6 +208,21 @@
                             The plan is to clamp the solder inside the tube in order to heat up, both work piece and solder unifromly and let the solder not escape anywhere it is not supposed to flow.
                             As said as done it worked like a charm. It has to be said, that there is a degree of color difference between the 9kt and 14kt gold, however, this is expected to be negligible, once the piece is done with a mirror finish.
                         </p>
+                        <div class="blog-pic-row">
+                            <div class="blog-pic-row-pic">
+                                <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-3.jpg" class="glightbox">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-3.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
+                                </a>
+                            </div>
+                            <div class="blog-pic-row-pic">
+                                <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-4.jpg" class="glightbox">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-4.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
+                                </a>
+                            </div>
+                            <div class="blog-pic-row-pic">
+                                <video src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/video/blog/yannick-schulz-goldsmithing-prototype.mp4" autoplay muted loop>
+                            </div>
+                        </div>
                     </div>
                     <div class="blog-section-two" id="section44">
                         <h3>Finishing Touch</h3>
@@ -240,6 +255,23 @@
                     <p>
 
                     </p>
+                    <div class="blog-pic-row">
+                        <div class="blog-pic-row-pic">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-13.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-13.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="blog-pic-row-pic">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-14.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-14.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="blog-pic-row-pic">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-22.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-22.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
