fixed the blog top level page, added cover photo and started interactive slideshow in jc, not working yet

--- a/blogTop.html
+++ b/blogTop.html
@@ -22,7 +22,7 @@
                 </nav>
             </header>
             <div class="coverphoto">
-                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="coverphoto silhouette holding a camera">
+                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/yannick-schulz-blog-cover.jpg" alt="coverphoto silhouette holding a camera">
             </div>
             <main class="gallery-page content-color page-heading">
                 <div class="textbox">
@@ -32,42 +32,68 @@
                     </p>
                 </div>
                 <section class="blogtop-container">
-                    <div class="blogtop-item">
-                        <a href="blogs/goldsmithing.html">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="a doctor and an engineer opposite of each other" class="blogtop-item-img">
+                    <a href="blogs/goldsmithing.html">
+                        <div class="blogtop-item">
+                            <!-- <div class="blogtop-item-img" id="goldsmithing">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-1.jpg" alt="a doctor and an engineer opposite of each other">
+                            </div>
+                            <div class="blogtop-item-img fade" id="goldsmithing">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-2.jpg" alt="a doctor and an engineer opposite of each other">
+                            </div>
+                            <div class="blogtop-item-img fade" id="goldsmithing">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-3.jpg" alt="a doctor and an engineer opposite of each other">
+                            </div>
+                            <div class="blogtop-item-img fade" id="goldsmithing">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-4.jpg" alt="a doctor and an engineer opposite of each other">
+                            </div> -->
+                            <div class="blogtop-item-img" id="goldsmithing">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-13.jpg" alt="a doctor and an engineer opposite of each other">
+                            </div>
+                            <!-- <div class="blogtop-item-img fade" id="goldsmithing">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-14.jpg" alt="a doctor and an engineer opposite of each other">
+                            </div>
+                            <div class="blogtop-item-img fade" id="goldsmithing">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-22.jpg" alt="a doctor and an engineer opposite of each other">
+                            </div>                                 -->
                             <div class="blogtop-item-text">
                                 <h2>Goldsmithing</h2>
                                 <p>
                                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
                                 </p>
                             </div>
-                        </a>
-                    </div>
-                    <div class="blogtop-item">
-                        <a href="blogs/goldsmithing.html">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="a doctor and an engineer opposite of each other" class="blogtop-item-img">
-                            <div class="blogtop-item-text">
-                                <h2>Goldsmithing</h2>
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="blogtop-item">
-                        <a href="blogs/goldsmithing.html">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="a doctor and an engineer opposite of each other" class="blogtop-item-img">
-                            <div class="blogtop-item-text">
-                                <h2>Goldsmithing</h2>
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
-                                </p>
-                            </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
+                    <a href="blogs/goldsmithing.html">
+                        <div class="blogtop-item">
+                                <div class="blogtop-item-img">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="a doctor and an engineer opposite of each other">
+                                </div>
+                                <div class="blogtop-item-text">
+                                    <h2>Goldsmithing</h2>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
+                                    </p>
+                                </div>
+                            
+                        </div>
+                    </a>
+                    <a href="blogs/goldsmithing.html">
+                        <div class="blogtop-item">    
+                                <div class="blogtop-item-img">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="a doctor and an engineer opposite of each other">
+                                </div>
+                                <div class="blogtop-item-text">
+                                    <h2>Goldsmithing</h2>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
+                                    </p>
+                                </div>
+                        </div>
+                    </a>
                 </section>
             </main>
         </div>
+        <!-- <script src="js/slideShow.js"></script> -->
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
              const lightbox = GLightbox({ loop: true });
